--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@remix-run/cloudflare": "^2.8.1",
     "@remix-run/cloudflare-pages": "^2.8.1",
     "@remix-run/react": "^2.8.1",
+    "@uidotdev/usehooks": "^2.4.1",
     "clsx": "^2.1.0",
     "isbot": "^4.1.0",
     "miniflare": "^3.20231030.4",
