--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,4 +1,4 @@
-name = "subterfuge-savior"
+name = "stratagem-savior"
 compatibility_date = "2024-03-29"
 
 # Variable bindings. These are arbitrary, plaintext strings (similar to environment variables)
