--- a/package.json
+++ b/package.json
@@ -1,60 +1,39 @@
 {
   "name": "stratagem-savior",
   "private": true,
-  "sideEffects": false,
+  "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "build": "remix vite:build",
-    "deploy": "npm run build && wrangler pages deploy ./build/client",
-    "dev": "remix vite:dev",
-    "format": "prettier . --write",
-    "format-check": "prettier . --check",
-    "lint": "eslint --ignore-path .gitignore --cache --cache-location ./node_modules/.cache/eslint .",
-    "start": "wrangler pages dev ./build/client",
-    "typecheck": "tsc",
-    "typegen": "wrangler types",
-    "preview": "npm run build && wrangler pages dev ./build/client",
-    "build-cf-types": "wrangler types"
+    "dev": "vite",
+    "build": "tsc && vite build",
+    "deploy": "npm run build && wrangler pages deploy ./dist",
+    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "preview": "vite preview"
   },
   "dependencies": {
-    "@remix-run/cloudflare": "^2.8.1",
-    "@remix-run/cloudflare-pages": "^2.8.1",
-    "@remix-run/react": "^2.8.1",
     "@uidotdev/usehooks": "^2.4.1",
-    "clsx": "^2.1.0",
-    "isbot": "^4.1.0",
-    "miniflare": "^3.20231030.4",
+    "howler": "^2.2.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "remix": "^2.8.1",
-    "remix-utils": "^7.5.0",
     "tailwind-merge": "^2.2.2"
   },
   "devDependencies": {
-    "@cloudflare/workers-types": "^4.20240329.0",
-    "@remix-run/dev": "^2.8.1",
-    "@types/react": "^18.2.20",
-    "@types/react-dom": "^18.2.7",
-    "@typescript-eslint/eslint-plugin": "^6.7.4",
-    "@typescript-eslint/parser": "^6.7.4",
+    "@types/howler": "^2.2.11",
+    "@types/react": "^18.2.66",
+    "@types/react-dom": "^18.2.22",
+    "@typescript-eslint/eslint-plugin": "^7.2.0",
+    "@typescript-eslint/parser": "^7.2.0",
+    "@vitejs/plugin-react-swc": "^3.5.0",
     "autoprefixer": "^10.4.19",
-    "eslint": "^8.38.0",
-    "eslint-import-resolver-typescript": "^3.6.1",
-    "eslint-plugin-import": "^2.28.1",
-    "eslint-plugin-jsx-a11y": "^6.7.1",
-    "eslint-plugin-react": "^7.33.2",
+    "eslint": "^8.57.0",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "node-fetch": "^3.3.2",
+    "eslint-plugin-react-refresh": "^0.4.6",
     "postcss": "^8.4.38",
-    "prettier": "3.2.5",
     "tailwindcss": "^3.4.3",
-    "typescript": "^5.1.6",
-    "vite": "^5.1.0",
+    "typescript": "^5.2.2",
+    "vite": "^5.2.0",
     "vite-plugin-svgr": "^4.2.0",
-    "vite-tsconfig-paths": "^4.2.1",
-    "wrangler": "^3.24.0"
-  },
-  "engines": {
-    "node": ">=18.0.0"
+    "vite-tsconfig-paths": "^4.3.2",
+    "wrangler": "^3.44.0"
   }
 }
