--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "howler": "^2.2.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-use-audio-player": "^2.2.0",
     "tailwind-merge": "^2.2.2"
   },
   "devDependencies": {
